package fr.esilv.simpleparql.source.converter.model;

public enum VARIABLES {
    VARIABLE,
    LABEL,
    TMP1,
    TMP2
}
